create payment type from user profile ready for PR

--- a/BangazonSite/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/BangazonSite/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -35,7 +35,12 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-
+            <div>
+                <a asp-controller="PaymentTypes" asp-action="Create">Add A Payment Type</a>
+            </div>
+            <div>
+                <a asp-controller="PaymentTypes" asp-action="Index">My Payment Options</a>
+                            </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
