--- a/BangazonSite/Views/PaymentTypes/Create.cshtml
+++ b/BangazonSite/Views/PaymentTypes/Create.cshtml
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-action="Details">Back to My Profile</a>
+    <a asp-action="Index">Back to My Payments</a>
 </div>
 
 @section Scripts {
