--- a/BangazonSite/Views/Shared/_Layout.cshtml
+++ b/BangazonSite/Views/Shared/_Layout.cshtml
@@ -24,16 +24,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MyProducts" asp-action="Index">My Products</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">My Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Index">Shopping Cart</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Shopping Cart</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MyProfile" asp-action="Index">My Profile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-route-id= "Identity"  asp-action="Manage">My Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area=""  asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
