--- a/BangazonSite/Views/PaymentTypes/Index.cshtml
+++ b/BangazonSite/Views/PaymentTypes/Index.cshtml
@@ -40,5 +40,5 @@
     </tbody>
 </table>
 <p>
-    <a asp-controller = "Profile"asp-action="Manage">Back to My Profile</a>
+    <a  asp-area="Identity" asp-page="/Account/Manage/Index">Back to My Profile</a>
 </p>
