--- a/BangazonSite/Views/Orders/Details.cshtml
+++ b/BangazonSite/Views/Orders/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BangazonSite.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Order";
 }
 
 <h1>Details</h1>
@@ -10,17 +10,22 @@
     <h4>My Order</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            <ul class="list-unstyled">
-                @foreach (OrderProduct orderProduct in Model.OrderProducts)
-                {
-                    <li>
-                        @Html.DisplayFor(model => orderProduct.Product.Title)  @Html.DisplayFor(model => orderProduct.Product.Quantity)  @Html.DisplayFor(model => orderProduct.Product.Price)
-                    </li>
-                }
-            </ul>
-        </dt>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.OrderProducts)
+    </dt> 
     </dl>
+    <dl class="row">
+    <dt class="col-sm-2">
+        <ul class="list-unstyled">
+            @foreach (OrderProduct orderProduct in Model.OrderProducts)
+            {
+                <li>
+                    @Html.DisplayFor(model => orderProduct.Product.Title)  @Html.DisplayFor(model => orderProduct.Product.Quantity)  @Html.DisplayFor(model => orderProduct.Product.Price)
+                </li>
+            }
+        </ul>
+    </dt>
+</dl>
     <button class= "btn btn-primary">Checkout</button>
 </div>
 <div>
