--- a/BangazonSite/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/BangazonSite/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -17,8 +17,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.FirstName"></label>
-                <input asp-for="Input.FirstName" class="form-control" />
-                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                <input asp-for="Input.FirstName" class="form-control"disabled />
             </div>
             <div class="form-group">
                 <label asp-for="Input.LastName"></label>
