--- a/BangazonSite/Views/Orders/Index.cshtml
+++ b/BangazonSite/Views/Orders/Index.cshtml
@@ -24,11 +24,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            <td>  
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                 </td>
         </tr>
 }
     </tbody>
