--- a/BangazonSite/Views/Orders/Edit.cshtml
+++ b/BangazonSite/Views/Orders/Edit.cshtml
@@ -19,7 +19,10 @@
                 <span asp-validation-for="PaymentType.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary"/>
+                @{ if (Model.PaymentType != null) { 
+                    <h1>Thank you! Your order has been placed!</h1>}
+                }
             </div>
         </form>
     </div>
