--- a/BangazonSite/Views/Shared/_Layout.cshtml
+++ b/BangazonSite/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <ul class="navbar-nav flex-grow-1">
                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Create">Sell Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">My Products</a>
