--- a/BangazonSite/Views/Products/Details.cshtml
+++ b/BangazonSite/Views/Products/Details.cshtml
@@ -67,6 +67,7 @@
     </dl>
 </div>
 <div>
+    <a asp-controller="OrderProducts" asp-action="Create" >Add To Cart</a> |
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
