ticket 4 complete pre pr

--- a/BangazonSite/Views/Shared/_Layout.cshtml
+++ b/BangazonSite/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                       
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Create">Sell Products</a>
                         </li>
@@ -29,10 +29,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Shopping Cart</a>
                         </li>
-                        
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area=""  asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <form asp-controller="Products" asp-action="Index">
+                            <input name="searchQuery" placeholder="Search for Products" />
+                            <button>Search</button>
+                        </form>
                     </ul>
                 </div>
             </div>
