--- a/BangazonSite/Views/Shared/_Layout.cshtml
+++ b/BangazonSite/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">My Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ProductTypes" asp-action="Index">Product Categories</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Types">Product Categories</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Shopping Cart</a>
