--- a/BangazonSite/Views/Orders/Details.cshtml
+++ b/BangazonSite/Views/Orders/Details.cshtml
@@ -17,20 +17,21 @@
     </tr>      
     </thead>
     <tbody>
-                
-        @foreach (OrderProduct orderProduct in Model.OrderProducts)
+        @if (Model.PaymentType == null)
         {
-            if (Model.PaymentType == null)
+            foreach (OrderProduct orderProduct in Model.OrderProducts)
             {
-                <tr>    
+                //if (Model.PaymentType == null)
+                //{
+            <tr>
                 <td>@Html.DisplayFor(model => orderProduct.Product.Title)</td>
                 <td>@Html.DisplayFor(model => orderProduct.Product.Quantity)</td>
                 <td>@Html.DisplayFor(model => orderProduct.Product.Price)</td>
-                </tr>
+            </tr>
+
             }
-            else { }
         }
-        </tbody>
+    </tbody>
 </Table>
 <a asp-action="Edit" asp-route-id="@Model.Id">
     <button class="btn btn-primary">Checkout</button></a>
