--- a/BangazonSite/Views/Orders/Edit.cshtml
+++ b/BangazonSite/Views/Orders/Edit.cshtml
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label asp-for="PaymentType.Id" class="control-label">Select a Payment Type</label>
                 <select asp-for="PaymentType.Name" class="form-control" asp-items="Model.PaymentTypes"></select>
-                <span asp-validation-for="PaymentType.Id" class="text-danger"></span>
+                <span asp-validation-for="PaymentType.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary"/>
