--- a/BangazonSite/Views/Orders/Edit.cshtml
+++ b/BangazonSite/Views/Orders/Edit.cshtml
@@ -12,11 +12,14 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Order.Id"/>
+            <input type="hidden" asp-for="Order.ApplicationUserId" />
+            <input type="hidden" asp-for="Order.OrderProducts"/>
             <input type="hidden" asp-for="PaymentType.Id" />
             <div class="form-group">
-                <label asp-for="PaymentType.Id" class="control-label">Select a Payment Type</label>
-                <select asp-for="PaymentType.Name" class="form-control" asp-items="Model.PaymentTypes"></select>
-                <span asp-validation-for="PaymentType.Name" class="text-danger"></span>
+                <label asp-for="Order.PaymentTypeId" class="control-label">Select a Payment Type</label>
+                <select asp-for="Order.PaymentTypeId" class="form-control" asp-items="Model.PaymentTypes"></select>
+                <span asp-validation-for="Order.PaymentTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary"/>
