--- a/BangazonSite/Views/Home/Index.cshtml
+++ b/BangazonSite/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <form asp-controller="Products" asp-action="Index">
+            <input name="citySearch" placeholder="Search by City" />
+            <button>Search</button>
+        </form>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
